--- a/index.html
+++ b/index.html
@@ -340,20 +340,8 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getDatabase, ref, set, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCoq5nM17RTBXDZOlwWBsIm7x6es_VJii0",
-            authDomain: "diss-writing-tracker.firebaseapp.com",
-            databaseURL: "https://diss-writing-tracker-default-rtdb.firebaseio.com",
-            projectId: "diss-writing-tracker",
-            storageBucket: "diss-writing-tracker.firebasestorage.app",
-            messagingSenderId: "954028268463",
-            appId: "1:954028268463:web:cc22977295a86af7056d5a",
-            measurementId: "G-88DXYZ7EJX"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
+        import { firebaseConfig } from './firebase-config.js';
+	const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
         const progressRef = ref(database, 'dissertationProgress');
 
